--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-select": "^5.0.0",
+    "@types/recharts": "^1.8.29",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-select": "^5.8.3",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@types/node": "^20",
