--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@types/react-select": "^5.0.0",
     "@types/recharts": "^1.8.29",
     "lucide-react": "^0.456.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "14.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-select": "^5.8.3",
     "recharts": "^2.13.3"
   },
@@ -23,7 +23,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
